--- a/app/src/main/res/layout/content_layout_ory_parameter_dialog.xml
+++ b/app/src/main/res/layout/content_layout_ory_parameter_dialog.xml
@@ -16,20 +16,23 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
+
             android:layout_marginEnd="8dp"
+            android:layout_gravity="bottom"
             android:layout_weight="1"
             android:text="@string/switch_ory_parameter"
             android:textColor="@color/text_recycle_smile" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_edit_content"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
             android:layout_gravity="bottom"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
             android:src="@drawable/baseline_edit_24"
-            android:tint="#C06C04" />
+            android:tint="@color/text_content_rza_2" />
 
     </LinearLayout>
 
