--- a/app/src/main/res/layout/item_electrical_equipment_el_motor.xml
+++ b/app/src/main/res/layout/item_electrical_equipment_el_motor.xml
@@ -59,8 +59,8 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="8dp"
                 android:textStyle="bold"
-                android:layout_marginEnd="8dp"
-                android:text="КРУ-,315 кВ яч 34 fdsfdfsfsdfsfff"
+                android:layout_marginEnd="2dp"
+                android:text="КРУ-,315 кВ яч 34 fdsввввfdfsfsdfsfff"
                 android:textColor="@color/text_content_rza"
                 android:textSize="16sp" />
 
