--- a/app/src/main/res/layout/item_electrical_equipment_tr.xml
+++ b/app/src/main/res/layout/item_electrical_equipment_tr.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:background="@drawable/background_item_electrical_tr"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_gravity="center"
-        android:id="@+id/tv_name"
-        style="@style/TextViewStyleContent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="8dp"
-        android:text="T-1"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+    <com.google.android.material.card.MaterialCardView
+        app:cardCornerRadius="24dp"
+        app:strokeColor="@color/home_page_gradient"
+        app:strokeWidth="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="4dp"
+        android:layout_marginVertical="6dp"
+        app:cardElevation="3dp">
+
+        <TextView
+            android:id="@+id/tv_name"
+            style="@style/TextViewStyleContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/background_item_electrical_tr"
+            android:gravity="center"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="10dp"
+            android:text="T-1"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
