--- a/app/src/main/res/layout/item_electrical_equipment_tsn.xml
+++ b/app/src/main/res/layout/item_electrical_equipment_tsn.xml
@@ -2,21 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout"
-    android:orientation="vertical"
-    android:background="@drawable/background_item_electrical_tsn">
+    android:orientation="vertical">
+
+    <com.google.android.material.card.MaterialCardView
+        app:cardCornerRadius="24dp"
+        app:strokeColor="@color/text_recycle_smile"
+        app:strokeWidth="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="4dp"
+        android:layout_marginVertical="6dp"
+        app:cardElevation="3dp">
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="TГ-1"
         style="@style/TextViewStyleContent"
         android:textStyle="bold"
-        android:layout_gravity="center"
+        android:background="@drawable/background_item_electrical_tsn"
+        android:gravity="center"
         android:textSize="20sp"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="8dp"/>
+        android:paddingVertical="10dp"
+        android:paddingHorizontal="8dp"/>
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
