--- a/app/src/main/res/layout/content_layout_switchgear.xml
+++ b/app/src/main/res/layout/content_layout_switchgear.xml
@@ -103,7 +103,7 @@
         app:layout_constraintTop_toTopOf="@+id/iv_ktc_ko" />
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/iv_hc"
+        android:id="@+id/iv_ktc_ty"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:padding="8dp"
@@ -112,6 +112,30 @@
         app:tint="@color/home_page_gradient"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_ktc_ko" />
+
+    <TextView
+        android:id="@+id/tv_ktc_ty"
+        style="@style/TextViewStyleContentHomePageSubsection"
+        android:layout_width="0dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/ktc_ty"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_ktc_ty"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/iv_ktc_ty"
+        app:layout_constraintTop_toTopOf="@+id/iv_ktc_ty" />
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/iv_hc"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:padding="8dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/baseline_circle_24"
+        app:tint="@color/home_page_gradient"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_ktc_ty" />
 
     <TextView
         android:id="@+id/tv_hc"
