--- a/app/src/main/res/layout/dialog_power_supply_selection.xml
+++ b/app/src/main/res/layout/dialog_power_supply_selection.xml
@@ -83,6 +83,13 @@
                 android:text="КТЦ к/о" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/chip_ktc_ty"
+                style="@style/ChipShiftSchedule"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="КТЦ ТУ" />
+
+            <com.google.android.material.chip.Chip
                 android:id="@+id/chip_hc"
                 style="@style/ChipShiftSchedule"
                 android:layout_width="wrap_content"
