--- a/app/src/main/res/layout/item_electrical_equipment_lighting.xml
+++ b/app/src/main/res/layout/item_electrical_equipment_lighting.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/CardViewDialogContentStyle"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="8dp"
-    android:background="@color/ory_key_background"
+    android:background="@color/calendar_background"
     app:cardCornerRadius="20dp"
-    app:strokeColor="@color/ory_key_background"
+    app:strokeColor="@color/calendar_background"
     app:strokeWidth="1dp">
 
     <LinearLayout
@@ -45,26 +46,26 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:text="КРУ-,315 кВ яч 34 fdsfdfsfsdfsfff"
-                    android:textColor="@color/backgroundItem"
+                    android:textColor="#716442"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
 
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/icon_idea"
-                    app:tint="@color/ory_key_background" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/icon_idea"
+            app:tint="@color/ory_key_background" />
 
         <ImageView
             android:id="@+id/iv_delete"
             android:layout_width="66dp"
-            android:paddingHorizontal="12dp"
             android:visibility="gone"
+            android:paddingHorizontal="12dp"
             android:background="@color/delete_background"
             android:src="@drawable/delete"
             app:tint="@color/text_input_assembly"
