--- a/app/src/main/res/layout/item_electrical_equipment_switchgear_lighting.xml
+++ b/app/src/main/res/layout/item_electrical_equipment_switchgear_lighting.xml
@@ -4,36 +4,22 @@
     style="@style/CardViewDialogContentStyle"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="8dp"
-    android:background="@color/ory_key_background"
+    android:background="@color/calendar_background"
     app:cardCornerRadius="20dp"
-    app:strokeColor="@color/ory_key_background"
+    app:strokeColor="@color/calendar_background"
     app:strokeWidth="1dp">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_item_lingthing"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tv_name"
-                style="@style/TextViewStyleContent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:text="@string/electrical_assembly"
-                android:textColor="#544A30"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+            android:background="@drawable/background_item_lingthing">
 
             <TextView
                 android:id="@+id/tv_name_department"
@@ -41,56 +27,86 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:alpha="0.7"
                 android:text="@string/electrical_assembly"
                 android:textColor="@color/backgroundItem"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/tv_power_supply"
+                style="@style/TextViewStyleContent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                android:text="КРУ-,315 кВ яч 34 fdsв\n\nвввfdfsfsdfsfff"
+                android:textColor="#716442"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_name_department"
+                app:layout_constraintVertical_bias="0.0" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="8dp"
+            <TextView
+                android:id="@+id/tv_name"
+                style="@style/TextViewStyleContent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="@string/electrical_assembly"
+                android:textColor="#544A30"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/iv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            android:gravity="center_vertical"
-            android:orientation="vertical">
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/electrical_panel_1"
+                app:layout_constraintEnd_toStartOf="@+id/iv_delete"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/calendar_background" />
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
 
                 android:layout_gravity="end"
+                android:layout_marginEnd="10dp"
                 android:src="@drawable/icon_idea"
-                app:tint="@color/ory_key_background" />
+                app:layout_constraintBottom_toTopOf="@+id/iv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:tint="@color/calendar_background" />
 
+            <ImageView
+                android:id="@+id/iv_delete"
+                android:layout_width="66dp"
+                android:layout_height="0dp"
+                android:background="@color/delete_background"
+                android:paddingHorizontal="12dp"
+                android:src="@drawable/delete"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/text_input_assembly" />
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/iv"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
-                android:src="@drawable/electrical_panel_1"
-                app:tint="@color/ory_key_background" />
-
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/iv_delete"
-            android:layout_width="66dp"
-            android:paddingHorizontal="12dp"
-            android:visibility="gone"
-            android:background="@color/delete_background"
-            android:src="@drawable/delete"
-            app:tint="@color/text_input_assembly"
-            android:layout_height="match_parent"/>
-
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
-
 </com.google.android.material.card.MaterialCardView>
